# indai

./: readme.md
chat-ui/: package-lock.json
flask_backend/: README.md  pyproject.toml
flask_backend/src/flask_backend/: __init__.py
sources/upload/: Welcome to Indecol_Ed.docx  Welcome to Indecol_master.docx  eastereggs.txt
sources/upload/web/: web_Committees and boards at EPT - Knowledge base - NTNU.html  web_EPT fitness activities - Knowledge base - NTNU.html  web_Projects and economy - Knowledge base - NTNU.html  web_Who does what in EPT Administration - Knowledge base - NTNU.html
sources/upload/wiki/: wiki_174491614.html  wiki_174491824.html  wiki_174491909.html  wiki_176850475.html  wiki_207259269.html  wiki_213779229.html  wiki_275909639.html  wiki_275909648.html  wiki_279380176.html  wiki_279380222.html  wiki_279380272.html  wiki_279380782.html  wiki_279380808.html  wiki_Accessing-the-wiki-on-Android_200605881.html  wiki_Acknowledgment-of-the-Digital-Lab_279382645.html  wiki_ArdaPy_174491821.html  wiki_Arda_174491815.html  wiki_Atom_213090916.html  wiki_Aviteam_204964202.html  wiki_BEST_215450196.html  wiki_Brightway_176848986.html  wiki_CLI-Lunch_267029276.html  wiki_CLIMMS--internals_184615175.html  wiki_CONSENSE_209453963.html  wiki_COSMO-on-Vilje_176849783.html  wiki_Clone-branches-other-than-master-from-remote-repository_174491989.html  wiki_Clone-remote-repository-to-local-pc_174491986.html  wiki_Coco_174491861.html  wiki_Code-editors-and-IDE_213779232.html  wiki_Communicating-your-research_176850839.html  wiki_DASK_245792969.html  (+78 more)
