[project]
name = "flask-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Konstantin Stadler", email = "konstantin.stadler@ntnu.no" }
]
dependencies = [
    "flask>=3.0.2",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flask_backend"]
